# FrenetCoordinates

./: CMakeLists.txt  Core.cpp  Core.h  Driver.cpp  IO.cpp  IO.h  NumericalMethods.cpp  NumericalMethods.h  README.md  Util.h
